# bevy_fastdev_start

./: .gitignore  Cargo.toml  README.md  justfile  main_working.rs  primary-window.toml  runhot.sh
assets/shaders/: noise.wgsl  test_shader_2d.wgsl
src/: main.rs
src/common/: mod.rs
src/module/: mod.rs  noise.rs  pong.rs
src/ui/: mod.rs
